--- a/README.Rmd
+++ b/README.Rmd
@@ -5,11 +5,8 @@ knitr::opts_chunk$set(collapse = TRUE, comment = "#>", fig.path = "README-", eva
 
 # _admixr_&mdash;interactive R interface for ADMIXTOOLS
 
-<!-- badges: start -->
-[![](https://cranlogs.r-pkg.org/badges/admixr)](https://cran.r-project.org/package=admixr)
-[![R-CMD-check](https://github.com/bodkan/admixr/workflows/R-CMD-check/badge.svg)](https://github.com/bodkan/admixr/actions)
-[![Coverage status](https://codecov.io/gh/bodkan/admixr/branch/main/graph/badge.svg)]https://app.codecov.io/github/bodkan/admixr?branch=main)
-[![Binder](http://mybinder.org/badge.svg)](http://beta.mybinder.org/v2/gh/bodkan/admixr/main?urlpath=rstudio)
+[![CRAN-version](https://www.r-pkg.org/badges/version/admixr)](https://cran.r-project.org/package=admixr) [![CRAN-downloads](https://cranlogs.r-pkg.org/badges/grand-total/admixr)](https://cran.r-project.org/package=admixr) [![R-CMD-check](https://github.com/bodkan/admixr/workflows/R-CMD-check/badge.svg)](https://github.com/bodkan/admixr/actions) [![Binder](http://mybinder.org/badge.svg)](http://beta.mybinder.org/v2/gh/bodkan/admixr/main?urlpath=rstudio) [![Coverage status](https://codecov.io/gh/bodkan/admixr/branch/main/graph/badge.svg)](https://app.codecov.io/github/bodkan/admixr?branch=main)
+
 <!-- badges: end -->
 
 ## What is _admixr_?
